# emi

./: .gitignore  CMakeLists.txt  Install-OpenCV-CUDA.md
src/: main.cpp
src/emi/: exceptions.h
src/emi/windows/: window.cpp  window.h
